brevity + preview img

--- a/content/blog/20240825-ollama.md
+++ b/content/blog/20240825-ollama.md
@@ -10,21 +10,12 @@ slug = "local-llm-and-chatbot"
 lead = ""
 math = true
 toc = true
-#images = ["/images/20240716-prowler.png"]
+images = ["/images/20240825-llama.jpg"]
 +++
 
 [Click here if you want to skip this wall of text](#ollama)
 
-I've been slow to come around to the "AI" hype. I find the industry tends to become enamored with certain buzzwords and talk about them non-stop:
-
-* "cloud native"
-* "containers"
-* "kubernetes"
-* "serverless"
-* "artificial intelligence"
-* "machine learning"
-
-Maybe I'm a curmudgeon, but in my experience these fads tend to over complicate things and in my opinion are sales and marketing gimmicks to sell companies more SaaS and PaaS. I've gotten jaded after implementing so many Kubernetes clusters, Helm charts, GitOps controllers, ingress controllers, monitoring daemonsets, AWS managed, Serverless, etc.... for 3 tier CRUD web services. Instead of running software on some machines companies _insist_ that it will be _so much better_ if it were on Kubernetes because that's "modern". Meanwhile their toolset bloats, operational issues become harder to debug, and you need entire teams dedicated to just maintain it.
+I've been slow to come around to the "AI" hype. I find the industry tends to become enamored with certain buzzwords and talk about them non-stop. Maybe I'm a curmudgeon, but in my experience these fads tend to over complicate things and in my opinion are sales and marketing gimmicks to sell companies more SaaS and PaaS. I've gotten jaded after implementing so many Kubernetes clusters, Helm charts, GitOps controllers, ingress controllers, monitoring daemonsets, AWS managed, Serverless, etc.... for 3 tier CRUD web services. Instead of running software on some machines companies _insist_ that it will be _so much better_ if it were on Kubernetes because that's "modern". Meanwhile their toolset bloats, operational issues become harder to debug, and you need entire teams dedicated to just maintain it.
 
 It keeps me in a job I guess.
 
