using personal site, no fs10xer

--- a/content/blog/20240825-ollama.md
+++ b/content/blog/20240825-ollama.md
@@ -3,7 +3,7 @@ title = "Setting Up A Local LLM and Chatbot"
 description = "Run open source large language models and chatbots on your own hardware."
 date = 2024-08-25T08:00:00+00:00
 draft = false
-template = "blog/page.html"
+template = "page.html"
 slug = "local-llm-and-chatbot"
 
 [extra]
@@ -27,7 +27,7 @@ I was alright using ChatGPT, but I am a nerd at heart and I like using open sour
 
 ## Ollama
 
-### Installation 
+### Installation
 
 One of the go-to tool is [Ollama](https://ollama.com). You install it to your system and will have a daemon running with a CLI tool available. I am running Ubuntu which the installer sets up a `systemd` service. It can also just be run with `ollama serve`. It needs to be running to perform any of the below operations.
 
@@ -41,7 +41,7 @@ Ollama hosts several models which you can download using the CLI tool or API. Yo
 ollama pull llama3.1
 ```
 
-The model will be stored on your system. You can check it's info by running 
+The model will be stored on your system. You can check it's info by running
 
 ```bash
 ollama show llama3.1
@@ -86,7 +86,7 @@ This is my favorite part. You have a model which was trained on a large data set
 
 The prompt text is:
 
-> you are a large language model which specializes in advanced level programming. you are precise in your speech and speak as few words as possible. when given programming questions you are to only return the code as requested from the user. try to be helpful as possible to your user who is still learning concepts. 
+> you are a large language model which specializes in advanced level programming. you are precise in your speech and speak as few words as possible. when given programming questions you are to only return the code as requested from the user. try to be helpful as possible to your user who is still learning concepts.
 
 I like this prompt because ChatGPT tends to be very verbose and either repeats code with slight variations and explains everything. I just want the code and I can interpret it myself and ask questions if I need to. With this prompt you can now start a new chat session and start asking it some questions.
 
@@ -107,7 +107,7 @@ curl http://localhost:11434/api/generate -d '{
 }'
 ```
 
-I am working on a program which can create an entire repo of infrastructure-as-code templates (Terraform/OpenTofu) by just describing the architecture. 
+I am working on a program which can create an entire repo of infrastructure-as-code templates (Terraform/OpenTofu) by just describing the architecture.
 
 ## Proof of Concept
 
