whole site revamped!

--- a/content/blog/20240825-ollama.md
+++ b/content/blog/20240825-ollama.md
@@ -10,7 +10,7 @@ slug = "local-llm-and-chatbot"
 lead = ""
 math = true
 toc = true
-images = ["/images/20240825-llama.jpg"]
+image = "/images/20240825-llama.jpg"
 +++
 
 [Click here if you want to skip this wall of text](#ollama)
