--- a/content/blog/20250326-kiss.md
+++ b/content/blog/20250326-kiss.md
@@ -10,7 +10,7 @@ slug = "you-are-overcomplicating-everything"
 lead = ""
 math = true
 toc = true
-image = "/images/20240825-llama.jpg"
+image = "/images/ship_on_fire.png"
 +++
 
 ## Modernization Is My Least Favorite Buzzword
@@ -23,7 +23,7 @@ I later started working at a hosting company that had hundreds of clients and se
 
 When we started running clients on AWS we stuck to the basics; LAMP stacks on EC2 (most of our customers were running simple sites). As our clientele became more sophisticated, we had to build for scale; autoscaling EC2, RDS, S3, Elasticache, etc. Software releases had to become more streamlined in an autoscaling group which forced different deployment methods, each with their own caveats:
 
-![](/deployment_methods.png)
+![](/images/deployment_methods.png)
 
 We could work it out with the customer which way made the most sense for them because they all have pros and cons. We also started using infrastructure-as-code tools so we could manage the infrastructure in a more programmatic way as well, starting with Cloudformation, then Terraform. We used the web console for troubleshooting and had CI/CD pipelines for infra + software releases.
 
@@ -31,7 +31,7 @@ Most of the "automation" was actually simple shell scripts run on a cron timer o
 
 ## The CNCF Era
 
-![](https://www.civo.com/assets/public/academy/courses/kubernetes-introduction/cncf-and-its-landscapes/cncf-landscape-lg-76deb3155685ef877c983fca1eb2d6bde90598d42e0806f6f3b119f72aee3dde.jpg)
+![](/images/cncf_landscape.jpg)
 
 In 2016-2017 I remember being enamored with the [Google SRE handbook](https://sre.google/sre-book/table-of-contents/). It resonated with me and I felt strongly that a similar approach would be beneficial in my environment. I started hearing about tools like [Kubernetes](https://kubernetes.io/) and the [CNCF](https://www.cncf.io/); ever since it's been a total cultural phenomenon. These days half of the customers I work with are either running workloads on Kubernetes or have a desire to use Kubernetes and other CNCF tools.
 
@@ -53,11 +53,11 @@ Kubernetes was made in the image of a Google platform, [Borg](https://kubernetes
 
 The organizations I meet with are using [hyperscalers](https://www.redhat.com/en/topics/cloud-computing/what-is-a-hyperscaler) like AWS which abstract thousands of servers in private data centers around the world with APIs and services to run workloads in a number of ways, but many orgs want to run Kubernetes on top of it anyways. We put abstractions on our abstractions in the post-modern world.
 
-![](/k8s.jpeg)
+![](/images/k8s.jpeg)
 
 ## Why???
 
-![](/grok.png)
+![](/images/grok.png)
 
 Who knows. I asked [Grok](https://x.ai/) for his take on it.
 
@@ -115,7 +115,7 @@ To troubleshoot issues we'd view logs and metrics in Cloudwatch via console or A
 
 This architecture will run without the need for much manual intervention. There's no upgrading cluster versions or core software, just deploying new versions of the application and tweaking infrastructure bits if new functionality is needed (some state tables in DynamoDB or CDN w/ Cloudfront for example). This will be as solid as a rock, running smoothly unless you push buggy code or receive a huge burst of traffic.
 
-<img src="/ecs-version.drawio.png" width="600px" />
+<img src="/images/ecs-version.drawio.png" width="600px" />
 
 
 #### Modern Kubernetes Deployment
@@ -142,7 +142,7 @@ Some of the tools don't even add new functionality, they're only there to operat
 
 They also have their own logs and metrics so you'll need to monitor them closely, because if something breaks it will likely affect your production environment.
 
-<img src="/k8s-version.drawio.png" width="600px" />
+<img src="/images/k8s-version.drawio.png" width="600px" />
 
 
 #### Do You See What I'm Saying?
@@ -191,6 +191,6 @@ The cloud is supposed to make things simpler and easier, more elastic, more comp
 
 ---
 
-I just started a new position at [VeUp](https://veup.com/) as a Solutions Architect. We're (yet another) AWS consulting partner. I think we're going to some good things with the team we're assembling.
+I just started a new position at [VeUp](https://veup.com/) as a Solutions Architect. We're an AWS consulting and engineering shop. I think we're going to build some great things with the team we're assembling.
 
 Contact links available on the [home page](/) if you want to chat about it or tell me I'm a moron :)
