--- a/content/blog/20240825-ollama.md
+++ b/content/blog/20240825-ollama.md
@@ -13,13 +13,7 @@ toc = true
 image = "/images/20240825-llama.jpg"
 +++
 
-[Click here if you want to skip this wall of text](#ollama)
-
-I've been slow to come around to the "AI" hype. I find the industry tends to become enamored with certain buzzwords and talk about them non-stop. Maybe I'm a curmudgeon, but in my experience these fads tend to over complicate things and in my opinion are sales and marketing gimmicks to sell companies more SaaS and PaaS. I've gotten jaded after implementing so many Kubernetes clusters, Helm charts, GitOps controllers, ingress controllers, monitoring daemonsets, AWS managed, Serverless, etc.... for 3 tier CRUD web services. Instead of running software on some machines companies _insist_ that it will be _so much better_ if it were on Kubernetes because that's "modern". Meanwhile their toolset bloats, operational issues become harder to debug, and you need entire teams dedicated to just maintain it.
-
-It keeps me in a job I guess.
-
-Anywho, I decided to give [ChatGPT](https://chatgpt.com) a try a few months ago and it was very impressive. It felt as amazing as my first time searching on Google. In fact, it became my replacement for Google. Any time I needed to look something up I would just ask ChatGPT and it would summarize an answer for me. I no longer needed to scrape web pages and documentation to read and interpret someone else's text. In fact, the more specific I prompted ChatGPT the better answer it would return. I could also tell it how to respond to me.
+I decided to give [ChatGPT](https://chatgpt.com) a try a few months ago and it was very impressive. It felt as amazing as my first time searching on Google. In fact, it became my replacement for Google. Any time I needed to look something up I would just ask ChatGPT and it would summarize an answer for me. I no longer needed to scrape web pages and documentation to read and interpret someone else's text. In fact, the more specific I prompted ChatGPT the better answer it would return. I could also tell it how to respond to me.
 
 I used it to mostly write code which I would copy and paste to my editor, it helped me figure out which bait and lures to use for fishing at the pier (caught some fish btw), and even helped me articulate something to use for a proposal for work.
 
