updating cdn url

--- a/content/blog/20250922-craps.md
+++ b/content/blog/20250922-craps.md
@@ -22,7 +22,7 @@ My favorite game is craps! Super fun dice game; you can play it simple or jump a
 If you want to play it is (hopefully) online at <a href="https://craps.lfglance.dev" target=_blank>https://craps.lfglance.dev</a>
 
 <video controls width="100%" poster="/images/craps-dogdice.png" style="object-fit: initial;">
-    <source src="https://cdn.fs10xer.dev/craps_lesson.mp4" type="video/mp4">
+    <source src="https://cdn.lfglance.dev/craps_lesson.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 
@@ -153,7 +153,7 @@ def split_amounts(self, amount: int) -> tuple:
 Another Javascript function removes all of the user placed chips and takes data from the backend to formally lay down chips where they belong. Some clever CSS offsets give the chips a nice stacked appearance.
 
 <video controls width="100%" style="object-fit: initial;">
-    <source src="https://cdn.fs10xer.dev/craps-chips.mp4" type="video/mp4">
+    <source src="https://cdn.lfglance.dev/craps-chips.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 
